--- a/container-udemy/tsconfig.json
+++ b/container-udemy/tsconfig.json
@@ -14,7 +14,7 @@
     "types": ["./remotes.d.ts"]
   },
   
-  "include": ["src"],
+  "include": ["src", "remotes.d.ts"],
   "ts-node": {
     "compilerOptions": {
       "module": "CommonJS"
