utilised mfConfig object from module-federation.config into webpack

--- a/products/package.json
+++ b/products/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "products",
+  "name": "cart",
   "version": "0.0.1",
   "scripts": {
     "start": "webpack serve --config webpack.config.js",
@@ -31,6 +31,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "zephyr-rspack-plugin": "^0.0.50"
   }
 }
