--- a/items/package.json
+++ b/items/package.json
@@ -27,10 +27,12 @@
     "webpack-dev-server": "^5.2.2"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.10.0",
     "@module-federation/enhanced": "^0.8.9",
     "@tailwindcss/postcss": "^4.1.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "zephyr-rspack-plugin": "^0.0.50"
   }
 }
