--- a/container-udemy/package.json
+++ b/container-udemy/package.json
@@ -5,9 +5,14 @@
     "build": "webpack",
     "build:dev": "NODE_ENV=development rspack build",
     "build:start": "cd dist && rspack serve",
-    "start": "webpack serve --config webpack.config.js"
+    "start:dev": "webpack serve --config config/webpack.dev.js"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.3",
+    "@babel/plugin-transform-runtime": "^7.28.3",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@rspack/cli": "~1.2.0",
     "@rspack/core": "~1.2.0",
     "@rspack/plugin-react-refresh": "~1.0.1",
@@ -15,6 +20,7 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.4.21",
+    "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
     "postcss": "^8.5.6",
@@ -28,6 +34,8 @@
     "webpack-cli": "^6.0.1"
   },
   "dependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/runtime": "^7.28.3",
     "@module-federation/enhanced": "^0.8.9",
     "@rspack/binding-darwin-arm64": "^1.4.11",
     "pnpm": "^10.14.0",
