--- a/products/package.json
+++ b/products/package.json
@@ -2,16 +2,22 @@
   "name": "cart",
   "version": "0.0.1",
   "scripts": {
-    "start": "webpack serve --config webpack.config.js",
+    "start:dev": "webpack serve --config config/webpack.dev.js",
     "build": "webpack "
   },
   "devDependencies": {
+    "@babel/core": "^7.28.3",
+    "@babel/plugin-transform-runtime": "^7.28.3",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@rspack/cli": "~1.2.0",
     "@rspack/core": "~1.2.0",
     "@rspack/plugin-react-refresh": "~1.0.1",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.1.0",
+    "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
     "postcss": "^8.2.1",
@@ -27,6 +33,8 @@
     "webpack-dev-server": "^5.2.2"
   },
   "dependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/runtime": "^7.28.3",
     "@module-federation/enhanced": "^0.8.9",
     "@tailwindcss/postcss": "^4.1.11",
     "react": "^19.0.0",
