chore(config): add production webpack setup
- Added webpack.prod.js for production builds.
- Configured optimizations like minification, code splitting, and cache busting.
- Ensured paths and plugins (HtmlWebpackPlugin, Module Federation) work for production.

--- a/container-udemy/package.json
+++ b/container-udemy/package.json
@@ -5,7 +5,8 @@
     "build": "webpack",
     "build:dev": "NODE_ENV=development rspack build",
     "build:start": "cd dist && rspack serve",
-    "start:dev": "webpack serve --config config/webpack.dev.js"
+    "start:dev": "webpack serve --config config/webpack.dev.js",
+    "start:prod": "webpack serve --config config/webpack.prod.js"
   },
   "devDependencies": {
     "@babel/core": "^7.28.3",
