--- a/items/package.json
+++ b/items/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "start:dev": "webpack serve --config config/webpack.dev.js",
+    "start:prod": "webpack serve --config config/webpack.prod.js",
     "build": "webpack "
   },
   "devDependencies": {
