--- a/items/package.json
+++ b/items/package.json
@@ -42,6 +42,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.8.1",
     "zephyr-rspack-plugin": "^0.0.50"
   }
 }
