--- a/products/package.json
+++ b/products/package.json
@@ -36,11 +36,19 @@
   "dependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/runtime": "^7.28.3",
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "^2.10.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@module-federation/enhanced": "^0.8.9",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/postcss": "^4.1.11",
+    "framer-motion": "^12.23.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.8.1",
     "zephyr-rspack-plugin": "^0.0.50"
   }
 }
